--- a/wiki/Comparative_Genomics_Visualization.mediawiki
+++ b/wiki/Comparative_Genomics_Visualization.mediawiki
@@ -4,7 +4,9 @@ In particular, GBrowse_syn lacks support for the [http://samtools.sourceforge.ne
 
 In addition to filling those gaps, GBrowse_syn would also particularly stand to benefit from the event by gaining a more sustainable developer base.
 
-== Interested Participants ==
+== Interested [[Participants]] ==
+
+Please add your name below.
 
 * [[Dave]]
 
