Change to wiki page

--- a/wiki/Comparative_Genomics_Visualization.mediawiki
+++ b/wiki/Comparative_Genomics_Visualization.mediawiki
@@ -9,6 +9,7 @@ In addition to filling those gaps, GBrowse_syn would also particularly stand to 
 Please add your name below.
 
 * [[Dave]]
+* [[Ben]]
 
 == See Also ==
 
