--- a/wiki/Comparative_Genomics_Visualization.mediawiki
+++ b/wiki/Comparative_Genomics_Visualization.mediawiki
@@ -10,7 +10,7 @@ Please add your name below.
 
 * [[Dave]]
 * [[User:Hitz@genome.stanford.edu|Ben]]
-* [[Hong Yi]]
+* [[Hong]]
 * [[User:Elyons.berkeley@gmail.com|Eric Lyons]]
 
 == See Also ==
